--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,66 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
+  <!-- <img src="assets/pokeball.png"> -->
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="presentHalfModal()">
+        <ion-icon name="menu-outline"></ion-icon>
+      </ion-button>
+      <ion-button (click)="refreshPage()">
+        <ion-icon name="repeat-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <div class="titles">
+      <h4>
+        CAGE BASKETBALL GUIDE
+      </h4>
+      <ion-card-subtitle>
+        Search for Guide by name.
+      </ion-card-subtitle>
+  
+    
+    </div>
+    
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar class="ion-no-padding ion-padding-top" placeholder="Search." (ionInput)="filterProductData($event)"></ion-searchbar>
+  </ion-toolbar>
+
+ 
+
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content fullscreen="true">
+  <div class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    
+
+    <ion-card color="secondary" *ngFor="let guideline of guidelines" (click)="viewDetailsGuide(guideline)">
+      <ion-button  style="float: right;"  color="danger" >
+        <ion-icon name="arrow-forward-circle-outline"  ></ion-icon>
+        View
+      </ion-button>
+      <div class="mask">
+        <img src="assets/pokeball.png">
+      </div>
+      <ion-card-content >
+        <ion-row>
+          <ion-col size="8">
+            <ion-card-subtitle class="no">#{{guideline.id}}</ion-card-subtitle>
+            <ion-card-title>{{guideline.guideline_name}}</ion-card-title>
+            <ion-card-subtitle>
+              <!-- <ion-badge>
+                <ion-icon name="water"></ion-icon>
+                Water
+              </ion-badge> -->
+            </ion-card-subtitle>
+          </ion-col>
+          <ion-col size="4">
+            <!-- <ion-img src="assets/ball.jpg"></ion-img> -->
+          </ion-col>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+
+   
   </div>
 </ion-content>
